# serve-static

./: .editorconfig  Cargo.toml  README.md
html/: script.js
src/: config.rs  main.rs
