[package]
name = "serve-static"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
clap = { version = "4.5.30", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
